# xai-anthropic

./: README.md  anthropic_components.py  anthropic_example.xircuits  pyproject.toml  requirements.txt
.github/workflows/: run-workflow-tests.yml
examples/: anthropic_example.xircuits
