[project]
name = "xai-anthropic"
version = "0.1.0"
description = "A Xircuits component library for Anthropic's API!"
authors = [{ name = "XpressAI", email = "eduardo@xpress.ai" }]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/XpressAI/xai-anthropic"
keywords = ["xircuits", "anthropic", "text generation"]

# Xircuits-specific configurations
[tool.xircuits]
default_example_path = "examples/anthropic_example.xircuits"
requirements_path = "requirements.txt"
